Add pricing and contact form

--- a/index.html
+++ b/index.html
@@ -235,6 +235,11 @@
               </div>
             </div>
           </div>
+          <div class="row">
+            <a href="#pablo" class="btn btn-primary btn-lg">
+              See our lessons
+            </a>
+          </div>
         </div>
       </div>
     </div>
@@ -263,10 +268,7 @@
           <div class="row">
 
             <div class="col-md-5 col-md-offset-1">
-              <div class="card card-background" style="background-image: url('assets/img/examples/card-project2.jpg')">
-                <a href="#pablo">
-
-                </a>
+              <div class="card card-no-shadow-background" style="background-image: url('assets/img/examples/card-project2.jpg')">
                 <div class="card-content">
                   <!-- <label class="label label-rose">Client: Apple</label>
               <a href="#pablo">
@@ -311,6 +313,183 @@
         </div>
 
       </div>
+    </div>
+
+
+
+
+
+
+
+
+
+
+    <div class="cd-section" id="pricing">
+
+      <!--     *********    PRICING 5     *********      -->
+
+      <div class="pricing-5 section-gray" id="pricing-5">
+
+        <div class="container">
+          <div class="row">
+            <div class="col-md-4">
+              <h2 class="title">Choose a plan for your next project</h2>
+              <ul class="nav nav-pills" role="tablist">
+                <li class="active">
+                  <a href="#personal" role="tab" data-toggle="tab">
+                    Private
+                  </a>
+                </li>
+                <li>
+                  <a href="#commercial" role="tab" data-toggle="tab">
+                    Semi-Private
+                  </a>
+                </li>
+                <li>
+                  <a href="#commercial-2" role="tab" data-toggle="tab">
+                    Group
+                  </a>
+                </li>
+              </ul>
+
+              <p class="text-gray">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quisquam quo ducimus illo beatae
+                at eos eum, qui nulla distinctio omnis mollitia reprehenderit sunt. Eligendi eius iure
+                totam reprehenderit laboriosam, veniam.</p>
+              <a href="#pablo" class="btn btn-primary margin-top-small">
+                Click here for more plans
+              </a>
+            </div>
+
+            <div class="col-md-7 col-md-offset-1">
+              <div class="tab-content tab-space">
+                <div class="tab-pane active" id="personal">
+
+                  <div class="col-md-6">
+                    <div class="card card-pricing card-raised">
+                      <div class="card-content">
+                        <h6 class="category">In School</h6>
+                        <h1 class="card-title"><small>¥</small>4000</h1>
+                        <ul>
+                          <li><b>1</b> Student</li>
+                          <li><b>40</b> Minutes</li>
+                          <li><b>##</b> ###</li>
+                          <li><b>##</b> ###</li>
+                        </ul>
+                        <a href="#pablo" class="btn btn-primary btn-round">
+                          Contact
+                        </a>
+                      </div>
+                    </div>
+                  </div>
+
+                  <div class="col-md-6">
+                    <div class="card card-pricing card-plain">
+                      <div class="card-content">
+                        <h6 class="category">Web Lesson</h6>
+                        <h1 class="card-title"><small>¥</small>3000</h1>
+                        <ul>
+                          <li><b>1</b> Student</li>
+                          <li><b>40</b> Minutes</li>
+                          <li><b>##</b> ###</li>
+                          <li><b>##</b> ###</li>
+                        </ul>
+                        <a href="#pablo" class="btn btn-white btn-round">
+                          Contact
+                        </a>
+                      </div>
+                    </div>
+                  </div>
+
+                </div>
+
+                <div class="tab-pane" id="commercial">
+                  <div class="col-md-6">
+                    <div class="card card-pricing card-raised">
+                      <div class="card-content">
+                        <h6 class="category">In School</h6>
+                        <h1 class="card-title"><small>¥</small>3000</h1>
+                        <ul>
+                          <li><b>2</b> Students</li>
+                          <li><b>40</b> Minutes</li>
+                          <li><b>##</b> ###</li>
+                          <li><b>##</b> ###</li>
+                        </ul>
+                        <a href="#pablo" class="btn btn-primary btn-round">
+                          Contact
+                        </a>
+                      </div>
+                    </div>
+                  </div>
+
+                  <div class="col-md-6">
+                    <div class="card card-pricing card-plain">
+                      <div class="card-content">
+                        <h6 class="category">In School</h6>
+                        <h1 class="card-title"><small>¥</small>3000</h1>
+                        <ul>
+                          <li><b>2</b> Students</li>
+                          <li><b>40</b> Minutes</li>
+                          <li><b>##</b> ###</li>
+                          <li><b>##</b> ###</li>
+                        </ul>
+                        <a href="#pablo" class="btn btn-primary btn-round">
+                          Contact
+                        </a>
+                      </div>
+                    </div>
+                  </div>
+
+                </div>
+
+                <div class="tab-pane" id="commercial-2">
+                  <div class="col-md-6">
+                    <div class="card card-pricing card-raised">
+                      <div class="card-content">
+                        <h6 class="category">In School</h6>
+                        <h1 class="card-title"><small>¥</small>2000</h1>
+                        <ul>
+                          <li><b>Up to 4</b> Students</li>
+                          <li><b>40</b> Minutes</li>
+                          <li><b>##</b> ###</li>
+                          <li><b>##</b> ###</li>
+                        </ul>
+                        <a href="#pablo" class="btn btn-primary btn-round">
+                          Contact
+                        </a>
+                      </div>
+                    </div>
+                  </div>
+
+                  <div class="col-md-6">
+                    <div class="card card-pricing card-plain">
+                      <div class="card-content">
+                        <h6 class="category">In School</h6>
+                        <h1 class="card-title"><small>¥</small>2000</h1>
+                        <ul>
+                          <li><b>Up to 4</b> Students</li>
+                          <li><b>40</b> Minutes</li>
+                          <li><b>##</b> ###</li>
+                          <li><b>##</b> ###</li>
+                        </ul>
+                        <a href="#pablo" class="btn btn-primary btn-round">
+                          Contact
+                        </a>
+                      </div>
+                    </div>
+                  </div>
+
+                </div>
+              </div>
+            </div>
+
+
+          </div>
+
+        </div>
+      </div>
+
+      <!--     *********    END PRICING 5      *********      -->
+
     </div>
 
 
@@ -487,7 +666,7 @@
                 <div class="col-md-5">
                   <div class="card-image">
                     <a href="#pablo">
-                      <img class="img" src="assets/img/faces/card-profile4-square.jpg" />
+                      <img class="img" src="assets/img/faces/card-profile2-square.jpg" />
                     </a>
                   </div>
                 </div>
@@ -512,7 +691,7 @@
                 <div class="col-md-5">
                   <div class="card-image">
                     <a href="#pablo">
-                      <img class="img" src="assets/img/faces/card-profile2-square.jpg" />
+                      <img class="img" src="assets/img/faces/card-profile4-square.jpg" />
                     </a>
                   </div>
                 </div>
@@ -540,7 +719,10 @@
     <!-- container -->
 
     <div class="container">
-      <div class="section section-contacts">
+
+
+
+      <!-- <div class="section section-contacts">
         <div class="row">
           <div class="col-md-8 col-md-offset-2">
             <h2 class="text-center title">Contact Us</h2>
@@ -579,35 +761,133 @@
           </div>
         </div>
 
+      </div> -->
+
+
+
+      <div class="cd-section" id="contactus">
+
+
+        <!--     *********    CONTACT US 2     *********      -->
+
+        <div class="contactus-2">
+          <div id="contactUs2Map" class="custom-map">
+
+          </div>
+
+
+          <div class="col-md-6">
+            <div class="card card-contact card-raised">
+              <form role="form" id="contact-form" method="post">
+                <div class="header header-raised header-blue text-center">
+                  <h4 class="card-title">Contact Us</h4>
+                </div>
+                <div class="card-content">
+
+                  <div class="row">
+                    <div class="col-md-6">
+                      <div class="info info-horizontal">
+                        <div class="icon icon-info">
+                          <i class="material-icons">phone</i>
+                        </div>
+                        <div class="description">
+                          <h5 class="info-title">Give us a ring</h5>
+                          <p> Michael Jordan<br> +40 762 321 762<br> Mon - Fri, 8:00-22:00
+                          </p>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="col-md-6">
+                      <div class="info info-horizontal">
+                        <div class="icon icon-info">
+                          <i class="material-icons">pin_drop</i>
+                        </div>
+                        <div class="description">
+                          <h5 class="info-title">Find us at the office</h5>
+                          <p> Bld Mihail Kogalniceanu, nr. 8,<br> 7652 Bucharest,<br> Romania
+                          </p>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+
+                  <div class="row">
+                    <div class="col-md-6">
+                      <div class="form-group label-floating form-info">
+                        <label class="control-label">Full Name</label>
+                        <input type="text" name="name" class="form-control">
+                      </div>
+                    </div>
+                    <div class="col-md-6">
+                      <div class="form-group label-floating form-info">
+                        <label class="control-label">Email address</label>
+                        <input type="email" name="email" class="form-control" />
+                      </div>
+                    </div>
+                  </div>
+
+                  <div class="form-group label-floating form-info">
+                    <label class="control-label">Your message</label>
+                    <textarea name="message" class="form-control" id="message" rows="6"></textarea>
+                  </div>
+
+                  <div class="row">
+                    <div class="col-md-6">
+                      <div class="checkbox">
+                        <label>
+  										<input type="checkbox" name="optionsCheckboxes">
+  										I'm not a robot
+  									</label>
+                      </div>
+                    </div>
+                    <div class="col-md-6">
+                      <button type="submit" class="btn btn-info pull-right">Send Message</button>
+                    </div>
+                  </div>
+                </div>
+
+              </form>
+            </div>
+          </div>
+        </div>
+
+        <!--     *********    END CONTACT US 2      *********      -->
+
       </div>
+
+
+
+
+
+
+
+
     </div>
     <!-- container -->
 
+
   </div>
   <!-- main main-raised -->
+
+
 
   <footer class="footer">
     <div class="container">
       <nav class="pull-left">
         <ul>
           <li>
-            <a href="http://www.creative-tim.com">
-              Creative Tim
+            <a href="http://sunmihall.com">
+              Sun Mihall Language Services
             </a>
           </li>
           <li>
-            <a href="http://presentation.creative-tim.com">
+            <a href="#">
               About Us
             </a>
           </li>
           <li>
-            <a href="http://blog.creative-tim.com">
+            <a href="#">
               Blog
-            </a>
-          </li>
-          <li>
-            <a href="http://www.creative-tim.com/license">
-              Licenses
             </a>
           </li>
         </ul>
@@ -617,7 +897,7 @@
         <script>
           document.write(new Date().getFullYear())
         </script>, made with
-        <i class="fa fa-heart heart"></i> by Creative Tim
+        <i class="fa fa-heart heart"></i> by KobeDesignLab
       </div>
     </div>
   </footer>
