Add map to contact section

--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@
   <!-- CSS Files -->
   <link href="assets/css/bootstrap.min.css" rel="stylesheet" />
   <!-- <link rel="stylesheet" href="assets/css/style.css"> -->
-  <link rel="stylesheet" href="assets/css/main.css">
+  <link rel="stylesheet" href="assets/css/main1.css">
+  <link rel="stylesheet" href="assets/css/main2.css">
 
 </head>
 
@@ -40,55 +41,55 @@
       <div class="collapse navbar-collapse">
         <ul class="nav navbar-nav navbar-right">
           <li>
-            <a href="../index.html">
-              <i class="material-icons">apps</i> Components
+            <a href="#">
+              <i class="material-icons">apps</i> Link 1
             </a>
           </li>
 
           <li class="dropdown">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-              <i class="material-icons">view_day</i> Sections
+              <i class="material-icons">view_day</i> Link 2
               <b class="caret"></b>
             </a>
             <ul class="dropdown-menu dropdown-with-icons">
               <li>
-                <a href="../sections.html#headers">
-                  <i class="material-icons">dns</i> Headers
+                <a href="#">
+                  <i class="material-icons">dns</i> sub-link
                 </a>
               </li>
               <li>
-                <a href="../sections.html#features">
-                  <i class="material-icons">build</i> Features
+                <a href="#">
+                  <i class="material-icons">build</i> sub-link
                 </a>
               </li>
               <li>
-                <a href="../sections.html#blogs">
-                  <i class="material-icons">list</i> Blogs
+                <a href="#">
+                  <i class="material-icons">list</i> sub-link
                 </a>
               </li>
               <li>
-                <a href="../sections.html#teams">
-                  <i class="material-icons">people</i> Teams
+                <a href="#">
+                  <i class="material-icons">people</i> sub-link
                 </a>
               </li>
               <li>
-                <a href="../sections.html#projects">
-                  <i class="material-icons">assignment</i> Projects
+                <a href="#">
+                  <i class="material-icons">assignment</i> sub-link
                 </a>
               </li>
               <li>
-                <a href="../sections.html#pricing">
-                  <i class="material-icons">monetization_on</i> Pricing
+                <a href="#">
+                  <i class="material-icons">monetization_on</i> sub-link
                 </a>
               </li>
               <li>
-                <a href="../sections.html#testimonials">
-                  <i class="material-icons">chat</i> Testimonials
+                <a href="#">
+                  <i class="material-icons">chat</i> sub-link
                 </a>
               </li>
               <li>
-                <a href="../sections.html#contactus">
-                  <i class="material-icons">call</i> Contacts
+                <a href="#">
+                  <i class="material-icons">call</i> sub-link
                 </a>
               </li>
 
@@ -97,71 +98,71 @@
 
           <li class="dropdown">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-              <i class="material-icons">view_carousel</i> Examples
+              <i class="material-icons">view_carousel</i> Link 3
               <b class="caret"></b>
             </a>
             <ul class="dropdown-menu dropdown-with-icons">
               <li>
-                <a href="../examples/about-us.html">
-                  <i class="material-icons">account_balance</i> About Us
+                <a href="#">
+                  <i class="material-icons">account_balance</i> sub-link
                 </a>
               </li>
               <li>
-                <a href="../examples/blog-post.html">
-                  <i class="material-icons">art_track</i> Blog Post
+                <a href="#">
+                  <i class="material-icons">art_track</i> sub-link
                 </a>
               </li>
               <li>
-                <a href="../examples/blog-posts.html">
-                  <i class="material-icons">view_quilt</i> Blog Posts
+                <a href="#">
+                  <i class="material-icons">view_quilt</i> sub-link
                 </a>
               </li>
               <li>
-                <a href="../examples/contact-us.html">
-                  <i class="material-icons">location_on</i> Contact Us
+                <a href="#">
+                  <i class="material-icons">location_on</i> sub-link
                 </a>
               </li>
               <li>
-                <a href="../examples/landing-page.html">
-                  <i class="material-icons">view_day</i> Landing Page
+                <a href="#">
+                  <i class="material-icons">view_day</i> sub-link
                 </a>
               </li>
               <li>
-                <a href="../examples/login-page.html">
-                  <i class="material-icons">fingerprint</i> Login Page
+                <a href="#">
+                  <i class="material-icons">fingerprint</i> sub-link
                 </a>
               </li>
               <li>
-                <a href="../examples/pricing.html">
-                  <i class="material-icons">attach_money</i> Pricing Page
+                <a href="#">
+                  <i class="material-icons">attach_money</i> sub-link
                 </a>
               </li>
               <li>
-                <a href="../examples/ecommerce.html">
-                  <i class="material-icons">shop</i> Ecommerce Page
+                <a href="#">
+                  <i class="material-icons">shop</i> sub-link
                 </a>
               </li>
               <li>
-                <a href="../examples/product-page.html">
-                  <i class="material-icons">beach_access</i> Product Page
+                <a href="#">
+                  <i class="material-icons">beach_access</i> sub-link
                 </a>
               </li>
               <li>
-                <a href="../examples/profile-page.html">
-                  <i class="material-icons">account_circle</i> Profile Page
+                <a href="#">
+                  <i class="material-icons">account_circle</i> sub-link
                 </a>
               </li>
               <li>
-                <a href="../examples/signup-page.html">
-                  <i class="material-icons">person_add</i> Signup Page
+                <a href="#">
+                  <i class="material-icons">person_add</i> sub-link
                 </a>
               </li>
             </ul>
           </li>
 
           <li>
-            <a href="http://www.creative-tim.com/buy/material-kit-pro?ref=presentation" target="_blank" class="btn btn-white btn-simple">
-              <i class="material-icons">shopping_cart</i> Buy Now
+            <a href="#" target="_blank" class="btn btn-white btn-simple">
+              <i class="material-icons">shopping_cart</i> Link 4
             </a>
           </li>
         </ul>
@@ -718,11 +719,11 @@
     </div>
     <!-- container -->
 
-    <div class="container">
+    <!-- <div class="container"> -->
 
 
 
-      <!-- <div class="section section-contacts">
+    <!-- <div class="section section-contacts">
         <div class="row">
           <div class="col-md-8 col-md-offset-2">
             <h2 class="text-center title">Contact Us</h2>
@@ -765,104 +766,104 @@
 
 
 
-      <div class="cd-section" id="contactus">
+    <div class="cd-section" id="contactus">
 
 
-        <!--     *********    CONTACT US 2     *********      -->
+      <!--     *********    CONTACT US 2     *********      -->
 
-        <div class="contactus-2">
-          <div id="contactUs2Map" class="custom-map">
+      <div class="contactus-2">
+        <div id="contactUs2Map" class="custom-map">
+          <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d52487.26202897336!2d135.19267358540992!3d34.69373040457312!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2sjp!4v1536624732910"
+            width="100%" height="100%" frameborder="0" style="border:0" allowfullscreen></iframe>
+        </div>
 
-          </div>
+        <div class="col-md-5 contact-div">
+          <div class="card card-contact card-raised">
+            <form role="form" id="contact-form" method="post">
+              <div class="header header-raised header-blue text-center">
+                <h4 class="card-title">Contact Us</h4>
+              </div>
+              <div class="card-content">
 
-
-          <div class="col-md-6">
-            <div class="card card-contact card-raised">
-              <form role="form" id="contact-form" method="post">
-                <div class="header header-raised header-blue text-center">
-                  <h4 class="card-title">Contact Us</h4>
+                <div class="row">
+                  <div class="col-md-6">
+                    <div class="info info-horizontal">
+                      <div class="icon icon-info">
+                        <i class="material-icons">phone</i>
+                      </div>
+                      <div class="description">
+                        <h5 class="info-title">Give us a ring</h5>
+                        <p> Michael Jordan<br> +40 762 321 762<br> Mon - Fri, 8:00-22:00
+                        </p>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="col-md-6">
+                    <div class="info info-horizontal">
+                      <div class="icon icon-info">
+                        <i class="material-icons">pin_drop</i>
+                      </div>
+                      <div class="description">
+                        <h5 class="info-title">Find us at the office</h5>
+                        <p> Bld Mihail Kogalniceanu, nr. 8,<br> 7652 Bucharest,<br> Romania
+                        </p>
+                      </div>
+                    </div>
+                  </div>
                 </div>
-                <div class="card-content">
 
-                  <div class="row">
-                    <div class="col-md-6">
-                      <div class="info info-horizontal">
-                        <div class="icon icon-info">
-                          <i class="material-icons">phone</i>
-                        </div>
-                        <div class="description">
-                          <h5 class="info-title">Give us a ring</h5>
-                          <p> Michael Jordan<br> +40 762 321 762<br> Mon - Fri, 8:00-22:00
-                          </p>
-                        </div>
-                      </div>
-                    </div>
-                    <div class="col-md-6">
-                      <div class="info info-horizontal">
-                        <div class="icon icon-info">
-                          <i class="material-icons">pin_drop</i>
-                        </div>
-                        <div class="description">
-                          <h5 class="info-title">Find us at the office</h5>
-                          <p> Bld Mihail Kogalniceanu, nr. 8,<br> 7652 Bucharest,<br> Romania
-                          </p>
-                        </div>
-                      </div>
+                <div class="row">
+                  <div class="col-md-6">
+                    <div class="form-group label-floating form-info">
+                      <label class="control-label">Full Name</label>
+                      <input type="text" name="name" class="form-control">
                     </div>
                   </div>
-
-                  <div class="row">
-                    <div class="col-md-6">
-                      <div class="form-group label-floating form-info">
-                        <label class="control-label">Full Name</label>
-                        <input type="text" name="name" class="form-control">
-                      </div>
-                    </div>
-                    <div class="col-md-6">
-                      <div class="form-group label-floating form-info">
-                        <label class="control-label">Email address</label>
-                        <input type="email" name="email" class="form-control" />
-                      </div>
+                  <div class="col-md-6">
+                    <div class="form-group label-floating form-info">
+                      <label class="control-label">Email address</label>
+                      <input type="email" name="email" class="form-control" />
                     </div>
                   </div>
+                </div>
 
-                  <div class="form-group label-floating form-info">
-                    <label class="control-label">Your message</label>
-                    <textarea name="message" class="form-control" id="message" rows="6"></textarea>
-                  </div>
+                <div class="form-group label-floating form-info">
+                  <label class="control-label">Your message</label>
+                  <textarea name="message" class="form-control" id="message" rows="6"></textarea>
+                </div>
 
-                  <div class="row">
-                    <div class="col-md-6">
-                      <div class="checkbox">
-                        <label>
+                <div class="row">
+                  <div class="col-md-6">
+                    <div class="checkbox">
+                      <label>
   										<input type="checkbox" name="optionsCheckboxes">
   										I'm not a robot
   									</label>
-                      </div>
-                    </div>
-                    <div class="col-md-6">
-                      <button type="submit" class="btn btn-info pull-right">Send Message</button>
                     </div>
                   </div>
+                  <div class="col-md-6">
+                    <button type="submit" class="btn btn-info pull-right">Send Message</button>
+                  </div>
                 </div>
+              </div>
 
-              </form>
-            </div>
+            </form>
           </div>
         </div>
-
-        <!--     *********    END CONTACT US 2      *********      -->
-
       </div>
 
-
-
-
-
-
-
+      <!--     *********    END CONTACT US 2      *********      -->
 
     </div>
+
+
+
+
+
+
+
+
+    <!-- </div> -->
     <!-- container -->
 
 
