Edit map for mobile display

--- a/index.html
+++ b/index.html
@@ -768,25 +768,25 @@
 
     <div class="cd-section" id="contactus">
 
+      <!--     *********    CONTACT US 1     *********      -->
 
-      <!--     *********    CONTACT US 2     *********      -->
+      <div class="contactus-1">
 
-      <div class="contactus-2">
-        <div id="contactUs2Map" class="custom-map">
-          <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d52487.26202897336!2d135.19267358540992!3d34.69373040457312!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2sjp!4v1536624732910"
-            width="100%" height="100%" frameborder="0" style="border:0" allowfullscreen></iframe>
+        <!-- <div class="container"> -->
+        <!-- <div class="row"> -->
+        <div class="col-md-7">
+
+
         </div>
-
         <div class="col-md-5 contact-div">
-          <div class="card card-contact card-raised">
+          <div class="card card-contact">
             <form role="form" id="contact-form" method="post">
               <div class="header header-raised header-blue text-center">
                 <h4 class="card-title">Contact Us</h4>
               </div>
               <div class="card-content">
-
                 <div class="row">
-                  <div class="col-md-6">
+                  <div class="col-sm-6">
                     <div class="info info-horizontal">
                       <div class="icon icon-info">
                         <i class="material-icons">phone</i>
@@ -798,7 +798,7 @@
                       </div>
                     </div>
                   </div>
-                  <div class="col-md-6">
+                  <div class="col-sm-6">
                     <div class="info info-horizontal">
                       <div class="icon icon-info">
                         <i class="material-icons">pin_drop</i>
@@ -811,23 +811,25 @@
                     </div>
                   </div>
                 </div>
-
                 <div class="row">
                   <div class="col-md-6">
-                    <div class="form-group label-floating form-info">
-                      <label class="control-label">Full Name</label>
+                    <div class="form-group label-floating">
+                      <label class="control-label">First name</label>
                       <input type="text" name="name" class="form-control">
                     </div>
                   </div>
                   <div class="col-md-6">
-                    <div class="form-group label-floating form-info">
-                      <label class="control-label">Email address</label>
-                      <input type="email" name="email" class="form-control" />
+                    <div class="form-group label-floating">
+                      <label class="control-label">Last name</label>
+                      <input type="text" name="name" class="form-control">
                     </div>
                   </div>
                 </div>
-
-                <div class="form-group label-floating form-info">
+                <div class="form-group label-floating">
+                  <label class="control-label">Email address</label>
+                  <input type="email" name="email" class="form-control" />
+                </div>
+                <div class="form-group label-floating">
                   <label class="control-label">Your message</label>
                   <textarea name="message" class="form-control" id="message" rows="6"></textarea>
                 </div>
@@ -836,13 +838,13 @@
                   <div class="col-md-6">
                     <div class="checkbox">
                       <label>
-  										<input type="checkbox" name="optionsCheckboxes">
-  										I'm not a robot
-  									</label>
+												<input type="checkbox" name="optionsCheckboxes">
+												I'm not a robot
+											</label>
                     </div>
                   </div>
                   <div class="col-md-6">
-                    <button type="submit" class="btn btn-info pull-right">Send Message</button>
+                    <button type="submit" class="btn btn-primary pull-right">Send Message</button>
                   </div>
                 </div>
               </div>
@@ -850,7 +852,112 @@
             </form>
           </div>
         </div>
+        <!-- </div> -->
+        <!-- </div> -->
+
+
+        <div id="contactUs2Map" class="custom-map">
+          <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d52487.26202897336!2d135.19267358540992!3d34.69373040457312!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2sjp!4v1536624732910"
+            width="100%" height="100%" frameborder="0" style="border:0" allowfullscreen></iframe>
+        </div>
+
+
+
+
       </div>
+
+      <!--     *********    END CONTACT US 1      *********      -->
+
+
+      <!--     *********    CONTACT US 2     *********      -->
+
+      <!-- <div class="contactus-2">
+
+        <div class="row">
+          <div class="col-md-6">
+            <div class="card card-contact card-raised">
+              <form role="form" method="post">
+                <div class="header header-raised header-blue text-center">
+                  <h4 class="card-title">Contact Us</h4>
+                </div>
+                <div class="card-content">
+
+                  <div class="row">
+                    <div class="col-md-6">
+                      <div class="info info-horizontal">
+                        <div class="icon icon-info">
+                          <i class="material-icons">phone</i>
+                        </div>
+                        <div class="description">
+                          <h5 class="info-title">Give us a ring</h5>
+                          <p> Michael Jordan<br> +40 762 321 762<br> Mon - Fri, 8:00-22:00
+                          </p>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="col-md-6">
+                      <div class="info info-horizontal">
+                        <div class="icon icon-info">
+                          <i class="material-icons">pin_drop</i>
+                        </div>
+                        <div class="description">
+                          <h5 class="info-title">Find us at the office</h5>
+                          <p> Bld Mihail Kogalniceanu, nr. 8,<br> 7652 Bucharest,<br> Romania
+                          </p>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+
+                  <div class="row">
+                    <div class="col-md-6">
+                      <div class="form-group label-floating form-info">
+                        <label class="control-label">Full Name</label>
+                        <input type="text" name="name" class="form-control">
+                      </div>
+                    </div>
+                    <div class="col-md-6">
+                      <div class="form-group label-floating form-info">
+                        <label class="control-label">Email address</label>
+                        <input type="email" name="email" class="form-control" />
+                      </div>
+                    </div>
+                  </div>
+
+                  <div class="form-group label-floating form-info">
+                    <label class="control-label">Your message</label>
+                    <textarea name="message" class="form-control" id="message" rows="6"></textarea>
+                  </div>
+
+                  <div class="row">
+                    <div class="col-md-6">
+                      <div class="checkbox">
+                        <label>
+  										<input type="checkbox" name="optionsCheckboxes">
+  										I'm not a robot
+  									</label>
+                      </div>
+                    </div>
+                    <div class="col-md-6">
+                      <button type="submit" class="btn btn-info pull-right">Send Message</button>
+                    </div>
+                  </div>
+                </div>
+
+              </form>
+            </div>
+          </div>
+
+          <div id="contactUs2Map" class="custom-map">
+            <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d52487.26202897336!2d135.19267358540992!3d34.69373040457312!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2sjp!4v1536624732910"
+              width="100%" height="100%" frameborder="0" style="border:0" allowfullscreen></iframe>
+          </div>
+
+        </div>
+        row
+
+
+      </div> -->
 
       <!--     *********    END CONTACT US 2      *********      -->
 
